# SimuTrade

./: README.md  pyproject.toml
src/simutrade/: backtester.py  main.py  utils.py
src/simutrade/strategies/: __init__.py  ai_based.py  bollinger_band.py  ma_crossover.py  moving_avarage_crossover.py  rsi.py  strategy.py
